--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <!--Right Col-->
             <div class="w-full md:w-3/5 py-6 text-center">
-                <img class="w-full md:w-4/5 z-50" src="/img/hero.png" />
+                <img class="w-full md:w-4/5 z-50" src="https://1.bp.blogspot.com/-_vaI4OZ_WwI/YIQhRdH8tAI/AAAAAAAABDM/rp-3xt2UgMwL-WxxqSUNN6GP8r3t_63WACLcBGAsYHQ/s320/hero.png" />
             </div>
         </div>
     </div>
