Update link url

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <!--Right Col-->
             <div class="w-full md:w-3/5 py-6 text-center">
-                <img class="w-full md:w-4/5 z-50" src="https://1.bp.blogspot.com/-_vaI4OZ_WwI/YIQhRdH8tAI/AAAAAAAABDM/rp-3xt2UgMwL-WxxqSUNN6GP8r3t_63WACLcBGAsYHQ/s320/hero.png" />
+                <img class="w-full md:w-4/5 z-50" src="img/hero.png" />
             </div>
         </div>
     </div>
@@ -111,12 +111,12 @@
                     </p>
                 </div>
                 <div class="w-full sm:w-1/2 p-6">
-                    <img src="/img/scan.png" class="h-48 w-60 ml-12" alt="">
+                    <img src="img/scan.png" class="h-48 w-60 ml-12" alt="">
                 </div>
             </div>
             <div class="flex flex-wrap flex-col-reverse sm:flex-row">
                 <div class="w-full sm:w-1/2 p-6 mt-6">
-                    <img src="/img/printer.png" class="h-48 w-60 ml-12" alt="">
+                    <img src="img/printer.png" class="h-48 w-60 ml-12" alt="">
                 </div>
                 <div class="w-full sm:w-1/2 p-6 mt-6">
                     <div class="align-middle">
@@ -141,7 +141,7 @@
             <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
                 <div class="max-w-md py-4 px-8 bg-white shadow-lg rounded-lg my-20">
                     <div class="flex justify-center md:justify-end -mt-16">
-                        <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500" src="/img/logo.png">
+                        <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500" src="img/logo.png">
                     </div>
                     <div>
                         <h2 class="text-gray-800 text-3xl font-semibold">Back-End Developer</h2>
@@ -155,7 +155,7 @@
             <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
                 <div class="max-w-md py-4 px-8 bg-white shadow-lg rounded-lg my-20">
                     <div class="flex justify-center md:justify-end -mt-16">
-                        <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500" src="/img/dp.jpg">
+                        <img class="w-20 h-20 object-cover rounded-full border-2 border-indigo-500" src="img/dp.jpg">
                     </div>
                     <div>
                         <h2 class="text-gray-800 text-3xl font-semibold">Front-End developer</h2>
