--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
         <h3 class="my-4 text-3xl leading-tight">Have Any Query Contact Us!</h3>
-        <a href="/template/contactUs.html">
+        <a href="template/contactUs.html">
             <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"> Contact Us </button>
         </a>
     </section>
