--- a/index.html
+++ b/index.html
@@ -237,16 +237,6 @@
                                 <!-- Required form plugin -->
                                 <link href="https://cdn.jsdelivr.net/npm/@tailwindcss/custom-forms@0.2.1/dist/custom-forms.css" rel="stylesheet" />
 
-                                <!-- <label class="block text-left" style="max-width: 400px">
-                        <span class="text-gray-700">Lead Source</span>
-                        <select class="form-select block w-full mt-1 text-blue-900" id="lead_source" name="lead_source">
-                            <option value="">--None--</option><option value="Web">Web</option>
-                            <option value="Phone Inquiry">Phone Inquiry</option>
-                            <option value="Partner Referral">Partner Referral</option>
-                            <option value="Purchased List">Purchased List</option>
-                            <option value="Other">Other</option>
-                        </select>
-                        </label> -->
                 
                             <label class="block text-gray-700 text-sm font-bold mb-2" for="lead_source">Lead Source</label>
                             <select class="form-select block w-full mt-1 text-blue-900" id="lead_source" name="lead_source">
@@ -262,7 +252,7 @@
                         </div>
                         
                         <div class="bg-gray-200 px-4 py-3 text-right ">
-                            <button type="button " class="py-2 px-4 bg-gray-500 text-white rounded hover:bg-gray-700 mr-2 " onclick="toggleModal() "><i class="fas fa-times "></i> Cancel</button>
+                            <button type="button " class="py-2 px-4 bg-gray-500 text-white rounded hover:bg-gray-700 mr-2 " ><i class="fas fa-times "></i> <a href="https://saurabhsharma104.github.io/TextToHandwriting.github.io/">Cancel</a></button>
                             <!-- <button type="button " id=" " class="py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-700 mr-2 ">Submit</button> -->
                             <input type="submit" name="submit" class="py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-700 mr-2 ">
                         </div>
